--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -105,7 +105,7 @@
         
         </div>
     </div>
-    <footer>最終更新日:</footer>
+    <footer id="last-updated">最終更新日: 読み込み中...</footer>
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
