--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
             </table>
         </div>
     </div>
-    <footer>最終更新日:</footer>
+    <footer id="last-updated">最終更新日: 読み込み中...</footer>
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='adjustTableHeader.js') }}"></script>
