--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -73,24 +73,16 @@
                         <div id="interactive-category-chart"></div>
                     </td>
                     <td>
-                        <div id="interactive-pie-chart"></div>
+                        <div id="interactive-category-pie"></div>
                     </td>
                 </tr>
                 <tr>
                     <td class="analysis_label">ユーザー別</td>
                     <td>
-                        {% if graph_user_url %}
-                            <img src="{{ graph_user_url }}" alt="分類別各月の支出金額">
-                        {% else %}
-                            <p>データがありません。</p>
-                        {% endif %}
+                        <div id="interactive-user-chart"></div>
                     </td>
                     <td>
-                        {% if pie_user_chart_url %}
-                            <img src="{{ pie_user_chart_url }}" alt="分類別年間の支出割合">
-                        {% else %}
-                            <p>データがありません。</p>
-                        {% endif %}
+                        <div id="interactive-user-pie"></div>
                     </td>
                 </tr>
             </table>
