--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -69,19 +69,19 @@
                 </tr>
                 <tr>
                     <td class="analysis_label">カテゴリー別</td>
-                    <td>
+                    <td class="chart_cell">
                         <div id="interactive-category-chart"></div>
                     </td>
-                    <td>
+                    <td class="chart_cell">
                         <div id="interactive-category-pie"></div>
                     </td>
                 </tr>
                 <tr>
                     <td class="analysis_label">ユーザー別</td>
-                    <td>
+                    <td class="chart_cell">
                         <div id="interactive-user-chart"></div>
                     </td>
-                    <td>
+                    <td class="chart_cell">
                         <div id="interactive-user-pie"></div>
                     </td>
                 </tr>
