graph.jsの修正 グラフを枠内に収めるようにanalysis_screen.cssを 修正しカテゴリーとユーザーの色を指定

--- a/static/analysis_screen.css
+++ b/static/analysis_screen.css
@@ -30,3 +30,23 @@
     white-space: nowrap;
     width: 120px;
 }
+
+#interactive-category-chart {
+    width: 100%;
+    max-width: 1200px;
+}
+
+#interactive-category-pie {
+    width: 100%;
+    max-width: 800px;
+}
+
+#interactive-user-chart {
+    width: 100%;
+    max-width: 1200px;
+}
+
+#interactive-user-pie {
+    width: 100%;
+    max-width: 800px;
+}
