index.htmlに表示するグラフをjava描画に変更

--- a/static/index_screen.css
+++ b/static/index_screen.css
@@ -58,3 +58,13 @@
     text-align: left;
     white-space: nowrap;
 }
+
+#interactive-user-chart {
+    width: 100%;
+    max-width: 1200px;
+}
+
+#lifecost-line-chart {
+    width: 100%;
+    max-width: 1200px;
+}
