--- a/templates/index.html
+++ b/templates/index.html
@@ -42,18 +42,10 @@
                 </tr>
                 <tr>
                     <td>
-                        {% if graph_index_url %}
-                            <img src="{{ graph_index_url }}" alt="分類別各月の支出金額">
-                        {% else %}
-                            <p>データがありません。</p>
-                        {% endif %}
+                        <div id="interactive-user-chart"></div>
                     </td>
                     <td>
-                        {% if graph_lifecost_url %}
-                            <img src="{{ graph_lifecost_url }}" alt="食費と外食と生活用品の支出推移">
-                        {% else %}
-                            <p>データがありません。</p>
-                        {% endif %}
+                        <div id="lifecost-line-chart"></div>
                     </td>
                 </tr>
                 <tr>
@@ -130,5 +122,7 @@
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='adjustTableHeader.js') }}"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.1.min.js"></script>
+    <script src="{{ url_for('static', filename='graph_index.js') }}"></script>
 </body>
 </html>
