--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -93,6 +93,7 @@
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
     <script src="https://cdn.plot.ly/plotly-2.27.1.min.js"></script>
-    <script src="{{ url_for('static', filename='graph.js') }}"></script>
+    <script src="{{ url_for('static', filename='graph_analysis1.js') }}"></script>
+    <script src="{{ url_for('static', filename='graph_analysis2.js') }}"></script>
 </body>
 </html>
