タイトルを個人家計簿から同棲家計簿へ

--- a/templates/input.html
+++ b/templates/input.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>個人家計簿　～支出入力～</title>
+    <title>同棲家計簿　～支出入力～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='input_screen.css') }}">
@@ -9,7 +9,7 @@
 <body data-page="input">
     <div class="page_header">
         <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
-        <h1>個人家計簿</h1>
+        <h1>同棲家計簿</h1>
         <h2>～支出入力～</h2>
     </div>
 
