--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>個人家計簿　～支出分析～</title>
+    <title>同棲家計簿　～支出分析～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='analysis_screen.css') }}">
@@ -9,7 +9,7 @@
 <body data-page="analysis">
     <div class="page_header">
         <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
-        <h1>個人家計簿</h1>
+        <h1>同棲家計簿</h1>
         <h2>～支出分析～</h2>
     </div>
     <!-- 🚀 .container の外に移動 -->
