--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>個人家計簿　～ホーム～</title>
+    <title>同棲家計簿　～ホーム～</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index_screen.css') }}">
@@ -9,7 +9,7 @@
 <body data-page="home">
     <div class="page_header">
         <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
-        <h1>個人家計簿</h1>
+        <h1>同棲家計簿</h1>
         <h2>～ホーム～</h2>
     </div>
     <!-- 🚀 .container の外に移動 -->
