--- a/templates/input.html
+++ b/templates/input.html
@@ -138,7 +138,7 @@
                                         <td>{{ expense[1] }}</td>
                                         <td>{{ expense[2] }}</td>
                                         <td>{{ expense[3] }}</td>
-                                        <td>{{ expense[4] }}</td>
+                                        <td id="amount-cell">{{ expense[4] }}</td>
                                         <td>{{ expense[5] }}</td>
                                     </tr>
                                     {% endfor %}
