settings.htmlを追加 表示内容は空

--- a/templates/input.html
+++ b/templates/input.html
@@ -20,6 +20,7 @@
             <li><a href="{{ url_for('index') }}">ホーム</a></li>
             <li><a href="{{ url_for('input_page') }}">支出入力</a></li>
             <li><a href="{{ url_for('analysis_page') }}">支出分析</a></li>
+            <li><a href="{{ url_for('settings_page') }}">マスタ設定</a></li>
         </ul>
     </nav>
 
