--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,10 @@ body[data-page="analysis"] .page_header {
     background-color: lightgreen;
 }
 
+body[data-page="setting"] .page_header {
+    background-color: lightgray;
+}
+
 .page_header {
     align-items: center;
     padding: 10px;
