--- a/templates/settings.html
+++ b/templates/settings.html
@@ -84,21 +84,21 @@
                 <tr>
                     <td>
                         <div class="master-form">
-                            <form id="category-mater-form" action="/submit" method="POST">
+                            <form id="category-mater-form" action="{{ url_for('settings_page') }}" method="POST">
                                 <label for="category">分類：</label>
-                                <input type="text">
-                                <button type="submit">登録</button>
-                                <button type="button" id="master-delete">削除</button>
+                                <input type="text" name="category" required>
+                                <button type="submit" id="master-add" name="form_add" value="category">登録</button>
+                                <button type="submit" id="master-delete" name="form_delete" value="category">削除</button>
                             </form>
                         </div>
                     </td>
                     <td>
                         <div class="master-form">
-                            <form id="user-master-form" action="/submit" method="POST">
+                            <form id="user-master-form" action="{{ url_for('settings_page') }}" method="POST">
                                 <label for="user">ユーザー：</label>
-                                <input type="text">
-                                <button type="submit">登録</button>
-                                <button type="button" id="master-delete">削除</button>
+                                <input type="text" name="user" required>
+                                <button type="submit" id="master-add" name="form_add" value="user">登録</button>
+                                <button type="submit" id="master-delete" name="form_delete" value="user">削除</button>
                             </form>
                         </div>
                     </td>
