--- a/templates/settings.html
+++ b/templates/settings.html
@@ -110,5 +110,6 @@
     <!-- JavaScriptを読み込む -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
     <script src="{{ url_for('static', filename='adjustTableHeader.js') }}"></script>
+    <script src="{{ url_for('static', filename='settings.js') }}"></script>
 </body>
 </html>
