--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -36,28 +36,16 @@
             </select>
             <label for="category">分類を選択：</label>
             <select name="category" id="category" onchange="this.form.submit()">
-                {% set categories = ['all' , '食費', '外食', '生活用品', '住宅費', 'お土産', 'コインランドリー', 'レジャー'] %}
+                <option value="all" {% if selected_category is none %}selected{% endif %}>すべて</option>
                 {% for cat in categories %}
-                    <option value="{{ cat }}" 
-                        {% if (cat == 'all' and selected_category is none) or (cat == selected_category) %}
-                            selected
-                        {% endif %}
-                    >
-                        {{ 'すべて' if cat == 'all' else cat }}
-                    </option>
+                    <option value="{{ cat }}" {% if cat == selected_category %}selected{% endif %}>{{ cat }}</option>
                 {% endfor %}
             </select>
             <label for="user">ユーザーを選択：</label>
             <select name="user" id="user" onchange="this.form.submit()">
-                {% set users = ['all' , 'タクミ', 'ミナヨ'] %}
+                <option value="all" {% if selected_user is none %}selected{% endif %}>すべて</option>
                 {% for u in users %}
-                    <option value="{{ u }}"
-                        {% if (u == 'all' and selected_user is none) or (u == selected_user) %}
-                            selected
-                        {% endif %}
-                    >
-                        {{ 'すべて' if u == 'all' else u }}
-                    </option>
+                    <option value="{{ u }}" {% if u == selected_user %}selected{% endif %}>{{ u }}</option>
                 {% endfor %}
             </select>            
         </form>
